Fri May  9 12:22:24 2003  Nicola Pero  <n.pero@mi.flashnet.it>

	* Documentation/install.texi (Flat Structure): Fixed typo.
	(Reported by Lele Gaifax <lele@seldati.it>).

Tue May  6 11:30:19 2003  Nicola Pero  <n.pero@mi.flashnet.it>

	* Instance/Shared/bundle.make (shared-instance-bundle-all):
	Reverted last change for resource files, but not localized
	resource files.

Mon May  5 00:52:20 2003  Nicola Pero  <n.pero@mi.flashnet.it>

	* Instance/Shared/bundle.make (shared-instance-bundle-all): Fixed
	copying resource files and localized resource files into the
	bundle when they are in subdirs.

2003-05-02  Adam Fedor  <fedor@gnu.org>

	* common.make (GNUSTEP_PALLETES): Put in ApplicationSupport/Palettes
	* move_obsolete_paths.sh: Remove Developer dir.
	* Documentat/GNUmakefile.in: Install docs in Library/Documentation

2003-04-28  Nicola Pero  <nicola@nicola.brainstorm.co.uk>

	* Instance/resource-set.make (RESOURCE_FILES_FULL_INSTALL_DIR): Reverted
	last change.  This file is of general use, not just for libraries.

2003-04-27  Adam Fedor  <fedor@gnu.org>

	* New filesystem structure.
	Use @MAKEFILE_SUFFIX@ instead of Makefiles.
	Replace $GNUSTEP_SYSTEM_ROOT/Makefiles with $GNUSTEP_MAKEFILES	
	Replace Libraries with Library/Libraries
	Replace Headers with Library/Headers
	Replace Documentation with Library/Documentation
	* GNUmakefile.in, GNustep.csh.in, common.make, config.site,
	debugapp.in, executable.template.in, gnustep-make.spec.in,
	java-executable.template, ld_lib_path.csh, ld_lib_path.sh,
	opentool.in, relative_path.sh, setlocaltz.sh,
	spec-debug-alone-rules.template, spec-debug-rules.template,
	spec-rules.template, target.make, which_lib.c, gswbundle.make,
	java.make, test-library.make: Idem.
	* configure.ac (MAKEFILES_SUFFIX): Define to Library/Makefiles
	* create_domain_dir_tree.sh: Add additional Library dirs.
	* resource-set.make (RESOURCE_FILES_FULL_INSTALL_DIR): Use
	$(GNUSTEP_RESOURCES), not $(GNUSTEP_INSTALLATION_DIR).